--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2'
 services:
     db:
         image: mysql
+        ports:
+          - 3306:3306
         volumes:
             - "./.data/db:/var/lib/mysql"
         environment:
@@ -10,6 +12,9 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        networks:
+            brandshop-network:
+                ipv4_address: 192.168.0.4
     php:
         build:
             context: php7-fpm
@@ -18,6 +23,10 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
+        networks:
+            brandshop-network:
+                ipv4_address: 192.168.0.5
+
     nginx:
         build: nginx
         ports:
@@ -26,13 +35,15 @@ services:
             - php
         volumes:
             - ./logs/nginx/:/var/log/nginx
-    elk:
-        image: willdurand/elk
-        ports:
-            - 81:80
-        volumes:
-            - ./elk/logstash:/etc/logstash
-            - ./elk/logstash/patterns:/opt/logstash/patterns
-        volumes_from:
-            - php
-            - nginx
+        networks:
+            brandshop-network:
+                ipv4_address: 192.168.0.6
+networks:
+    brandshop-network:
+        driver: bridge
+        ipam:
+            config:
+            - subnet: 192.168.0.0/24
+              gateway: 192.168.0.1
+
+
