--- a/php7-fpm/Dockerfile
+++ b/php7-fpm/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-get update && apt-get install -y \
     git \
     unzip \
     nodejs \
-    build-essential
+    build-essential \
+    vim
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
