--- a/nginx/brandshop.conf
+++ b/nginx/brandshop.conf
@@ -1,6 +1,6 @@
 server {
-    server_name hproject.dev;
-    root /var/www/hproject/web;
+    server_name brandshop;
+    root /var/www/miten/brandshop/web;
     index index.php index.html index.htm;
 
     location / {
