--- a/php7-fpm/Dockerfile
+++ b/php7-fpm/Dockerfile
@@ -43,4 +43,6 @@ RUN echo "xdebug.remote_port=9001" >> /usr/local/etc/php/conf.d/docker-php-ext-x
 RUN echo 'alias sf="php app/console"' >> ~/.bashrc
 RUN echo 'alias sf3="php bin/console"' >> ~/.bashrc
 
-WORKDIR /var/www/symfony
+RUN usermod -u 1000 www-data
+
+WORKDIR /var/www
