--- a/.env.dist
+++ b/.env.dist
@@ -8,4 +8,8 @@ MYSQL_USER=user
 MYSQL_PASSWORD=userpass
 
 # Timezone
-TIMEZONE=Europe/Paris
+TIMEZONE=Europe/Warsaw
+
+#Network
+SUBNET=192.168.0.0/24
+GETAWAY=192.168.0.1
