--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -1,6 +1,6 @@
 server {
-    server_name hproject.dev;
-    root /var/www/hproject/web;
+    server_name symfony.dev;
+    root /var/www/symfony/web;
     index index.php index.html index.htm;
 
     location / {
@@ -19,6 +19,6 @@ server {
         fastcgi_param HTTPS off;
     }
 
-    error_log /var/log/nginx/hproject_error.log;
-    access_log /var/log/nginx/hproject_access.log;
+    error_log /var/log/nginx/symfony_error.log;
+    access_log /var/log/nginx/symfony_access.log;
 }
